--- a/package.json
+++ b/package.json
@@ -13,21 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.1.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "concurrently": "^5.1.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.5",
-    "nodemon": "^2.0.2",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.0.0-beta.17",
-    "react-datepicker": "^2.14.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.1.3",
-    "react-scripts": "3.4.1"
+    "nedb": "^1.8.0",
+    "nodemon": "^2.0.2"
   }
 }
