--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "type": "module",
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
     "bootstrap": "^5.3.3",
