--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
+    "@seald-io/nedb": "^4.0.4",
+    "axios": "^1.7.9",
     "concurrently": "^5.1.0",
+    "csv-parser": "^3.2.0",
     "express": "^4.17.1",
-    "nedb": "^1.8.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^3.1.9"
   }
 }
